--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.navbar-nav {
+    margin-left: 60%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar-brand {
+    font-size: 1.9rem !important;
+    color: #565387 !important;
+}
+
+.brand-name {
+    color: #3698db;
+}
+
+.navbar a {
+    font-size: 1.3rem;
+    text-transform: capitalize;
+}
+
+.menu_active {
+    font-weight: bold;
+    border-bottom: 1px solid #565387;
+}
+
+.navbar a:hover {
+    color: #3698db;
+}
+
+.btn {
+    display: inline-block;
+    height: 50px;
+    width: 140px;
+    border: 2px solid #3698db;
+    border-radius: 140px;
+    padding: 11px;
+    background: white;
+    color: #3698db;
+    transition: 0.5s;
+    text-decoration: none;
+}
+
+.btn:hover {
+    height: 50px;
+    width: 140px;
+    border: 2px solid #3698db;
+    border-radius: 140px;
+    padding: 11px;
+    background: #3698db;
+    color: white;
+}
+
+h2 {
+    color: #484848;
+    font-size: 24px;
+}
+
+img {
+    text-align: right;
+    width: 800px;
+    border-radius: 900px;
 }
